# cmake-xmake-learn

./: README.md
ch2_1_message/: first.cmake
ch2_2_set_list/: list.cmake
ch2_3_control/: for.cmake  if.cmake
ch2_5_scope/: CMakeLists.txt
ch2_6_macro/:  macro.cmake
ch3_3_project/: CMakeLists.txt
ch3_3_project/animal/: cat.cpp
ch3_4_project/: CMakeLists.txt
ch4_2_project/: main.cpp
ch5_headfile/animal/: cat.h
ch6_option/: README.md
ch6_option/animal/: cat.cpp
cmake-catch2/: CMakeLists.txt
cmake-catch2/test/: CMakeLists.txt  test.cpp
cmake_gtest/: CMakeLists.txt
cmake_gtest/project/include/: add.h
cmake_gtest/project/src/: add.cpp
cmake_gtest/test/: CMakeLists.txt  test.cpp
cmake_learn/ch2_2_set_list/: set.cmake
cmake_learn/ch2_4_function/: func.cmake
cmake_learn/ch3_1_project/: CMakeLists.txt  main.cpp
cmake_learn/ch3_2_project/: CMakeLists.txt  main.cpp
cmake_learn/ch3_2_project/animal/: dog.h
cmake_learn/ch3_3_project/: main.cpp
cmake_learn/ch4_1_project/: CMakeLists.txt
cmake_learn/ch4_2_project/: CMakeLists.txt
cmake_learn/ch5_headfile/: CMakeLists.txt
cmake_learn/ch6_option/: main.cpp
cmake_learn/ch6_option/animal/: CMakeLists.txt  cattwo.cpp  cattwo.h
